apps/staging/chatgpt-next-web/deployment.enc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: chatgpt-next-web
    labels:
        name: chatgpt-next-web
spec:
    replicas: 1
    selector:
        matchLabels:
            app: chatgpt-next-web
    template:
        metadata:
            labels:
                app: chatgpt-next-web
        spec:
            containers:
                - image: yidadaa/chatgpt-next-web
                  imagePullPolicy: IfNotPresent
                  name: chatgpt-next-web
                  resources:
                    requests:
                        cpu: 50m
                        memory: 64Mi
                    limits:
                        cpu: 100m
                        memory: 256Mi
                  ports:
                    - containerPort: 3000
            restartPolicy: Always
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age: []
    lastmodified: "2023-08-15T06:59:42Z"
    mac: ENC[AES256_GCM,data:jQ3vWpBNiLuU5yDMOYmjG35p7hdTo/tI5RBkfmski+uo5ht7gcLyUYk1UtJGhV7nvc7LNszWtIq89PEhFDcnp/4+SouLgobrGWllRggH8Rwj6nFYnRflOB7tD8wjrdi75QyaLnKZzO5teu+HSbDzuqe7Pevshjj4eR7EFFPslbw=,iv:M2y4zTDF9HDgDFqTBByYHRr4NtSeN18gCcyhIEodNcg=,tag:66U5n4PhW9VJF3rIxwpBCg==,type:str]
    pgp:
        - created_at: "2023-08-15T06:59:41Z"
          enc: |
            -----BEGIN PGP MESSAGE-----

            hQIMA38T7Az157GMARAAj5qCK11PMPH5NBM8EviFg9F570EijtCL4IRbyvFt0kSa
[...]
            =0sZM
            -----END PGP MESSAGE-----
          fp: 129994A38E40322EE2A4FA6CB59C51DA13B1BF22
    encrypted_regex: ^(value|host|hosts|nginx\.ingress\.kubernetes\.io\/mirror-host|nginx\.ingress\.kubernetes\.io\/auth-url|nginx\.ingress\.kubernetes\.io\/auth-signin)$
    version: 3.7.3
